--- a/PolicyTemplates/policydefinitions/appservice-ftp-deny.json
+++ b/PolicyTemplates/policydefinitions/appservice-ftp-deny.json
@@ -14,10 +14,10 @@
         "allOf": [
           {
             "field": "type",
-            "equals": "Microsoft.Web/sites"
+            "equals": "Microsoft.Web/sites/config"
           },
           {
-            "field": "Microsoft.Web/sites/siteConfig.ftpsState",
+            "field": "Microsoft.Web/sites/config/ftpsState",
             "notEquals": "Disabled"
           }
         ]
